2004-07-02  Alan Modra  <amodra@bigpond.net.au>

	* frags.h (struct frag): Add has_code and insn_addr fields.
	* write.c (cvt_frag_to_fill): Invoke md_frag_check.
	* config/tc-ppc.c (md_assemble): Check and set insn_addr.
	* config/tc-ppc.h (md_frag_check): Define.

2004-06-28  Maciej W. Rozycki  <macro@linux-mips.org>

	* doc/Makefile.am (info): Rename goal to...
	(info-local): ... this, to preserve implicit dependencies.
	* doc/Makefile.in: Regenerate with automake 1.8.5.

2004-06-25  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* config/tc-m32r.c (md_convert_frag): Changed for @PLT.
	(m32r_cgen_record_fixup_exp): Changed for  @GOTOFF, @GOT.
	(m32r_fix_adjustable): Changed for  @GOTOFF, @GOT, @PLT.
	(tc_gen_reloc): Likewise.
	(m32r_end_of_match): Add for @GOTOFF, @GOT, @PLT.
	(m32r_parse_name): Likewise.
	(m32r_cgen_parse_fix_exp): Likewise.
	* config/tc-m32r.h (md_parse_name): Define for @GOTOFF, @GOT, @PLT.
	(O_PIC_reloc): Likewise.
	(TC_CGEN_PARSE_FIX_EXP): Likewise..
	* cgen.c (gas_cgen_parse_operand): Add TC_CGEN_PARSE_FIX_EXP
	for @GOTOFF, @GOT, @PLT.

2004-06-21 Jan Beulich  <jbeulich@novell.com>

	* gas/symbols.c: While discarding ordinary local absolute symbols
	when --strip-local-absolute is in effect, retain file symbols.

2004-06-20  Andreas Schwab  <schwab@suse.de>

	* config/tc-m68k.c (mri_chip): Replace current_chip, not augment.
	(md_parse_option): Likewise.

2004-06-17  Jan Beulich <jbeulich@novell.com>

	* config/tc-i386.c: Deal with LEX_QM the same way as with LEX_AT.
	* config/te-netware.h: New file.
	* config/te-ppcnw.h: Delete: Obsolete.
	* configure.in: Eliminate ill NetWare targets. Make generic
	NetWare target use proper emulation.
	* Makefile.am: Eliminate reference to obsolete te-ppcnw.h, add
	reference to new te-netware.h.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

2004-06-15  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (s390_insn): Avoid incorrect signed/unsigned